optimize longer texts up to 40%

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "fflate": "^0.8.2",
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
